# Datainnsamling-Behandling

./: Dockerfile.web  README.md
Downloads/Datac_exam/: AIExam.ipynb
MeglerMonitor/: .dockerignore  .env.backup  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TEST.md  Dockerfile  Dockerfile.web  LEGAL.md  LEGAL.md.backup  LICENSE  README.md  RENDER_DEPLOYMENT_SUMMARY.md  auto_import.py  clean_import.py  com.meglermonitor.startup.plist  deploy.sh  emergency_import.py  emergency_import_fixed.py  emergency_import_new.py  final_import.py  generate_comprehensive_sample.py  generate_sample_retry.py  generate_sample_via_scraper.py  healthcheck.sh  import_all_data.py  import_to_render.py  live_import.py  next.config.mjs  package.json  quick_import.py  render-web-only.yaml  render.yaml  render.yaml.backup  requirements.txt  setup-always-on.sh  setup-power-efficient.sh  startup.sh  streamlit_app.py  super_import.py  (+3 more)
MeglerMonitor/api/: .eslintrc.cjs  package.json  tsconfig.json
MeglerMonitor/app/: page.tsx
MeglerMonitor/components/: line-chart.tsx
MeglerMonitor/infra/: Dockerfile.api  Dockerfile.scraper  README.md  docker-compose.yml
MeglerMonitor/lib/: api.ts
MeglerMonitor/sample/: all_listings.json  all_listings_impressive.json  metrics.json
MeglerMonitor/scraper/: README.md  pyproject.toml
MeglerMonitor/scraper/src/megler_monitor_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
MeglerMonitor/scraper/src/scraper/: __init__.py  run.py  scrape_dnb.py  scrape_hjem.py  utils.py
MeglerMonitor/src/: tsconfig.json  (+1 more)
TestEiendom/: dashboard_pro.py
(+245 files in other folders)
